did PP in services after change fonts

--- a/homework16/index.html
+++ b/homework16/index.html
@@ -36,21 +36,21 @@
             <form class="row form-inline main-contact">
                 <div class="col-lg-3 bg-white contact-top">
                     <label class="sr-only" for="fullname1">Full Name</label>
-                    <div class="input-group align-items-center top-items">
+                    <div class="input-group align-items-center">
                         <img src="icons/human.png" alt="" width="12px" height="12px">
                         <input type="text" class="form-control border-0" id="fullname1" placeholder="Full Name">
                     </div>
                 </div>
                 <div class="col-lg-3 bg-white contact-top">
                     <label class="sr-only" for="email1">Email Address</label>
-                    <div class="input-group align-items-center top-items">
+                    <div class="input-group align-items-center">
                         <img src="icons/mail.png" alt="" width="12px" height="12px">
                         <input type="email" class="form-control border-0" id="email1" placeholder="Email Addres">
                     </div>
                 </div>
                 <div class="col-lg-3 bg-white contact-top">
                     <label class="sr-only" for="tel1">Phone Number</label>
-                    <div class="input-group align-items-center top-items">
+                    <div class="input-group align-items-center">
                         <img src="icons/phone.png" alt="" width="12px" height="12px">
                         <input type="tel" class="form-control border-0" id="tel1" placeholder="Phone Number">
                     </div>
@@ -94,17 +94,17 @@
                 <p class="subtitle">Lorem Ipsum is simply dummy Business industry.</p>
             </div>    
             <div class="row services-main">
-                <div class="col-lg-6">
-                    <div class="row services-clock">
+                <div class="col-lg-6 m-0 p-0">
+                    <div class="row services-items">
                         <div class="col-auto clock-img"><img src="icons/clock.png" alt=""></div>
                         <div class="col-10">
                             <h3 class="text-uppercase">Font-Awesome Icons</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting ind
-                                ustry. Lorem Ipsum has been the industry's standard dummy text ever 
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting ind ustry. 
+                                Lorem Ipsum has been the industry's standard dummy text ever 
                                 since the 1500s, when an unknown printer.</p>
                         </div>
                     </div>
-                    <div class="row services-studi">
+                    <div class="row services-items">
                         <div class="col-auto studi-img"><img src="icons/studi.png" alt=""></div>
                         <div class="col-10">
                             <h3 class="text-uppercase">Working Contact form</h3>
@@ -113,7 +113,7 @@
                                 cover many web sites still in their infancy</p>
                         </div>
                     </div>
-                    <div class="row services-code">
+                    <div class="row services-items">
                         <div class="col-auto code-img"><img src="icons/friendly_code.png" alt=""></div>
                         <div class="col-10">
                             <h3 class="text-uppercase">Friendly Code</h3>
@@ -123,8 +123,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
-                    <div class="row services-respons">
+                <div class="col-lg-6 m-0 p-0">
+                    <div class="row services-items">
                         <div class="col-auto respons-img"><img src="icons/respons.png" alt=""></div>
                         <div class="col-10">
                             <h3 class="text-uppercase">Fully Responsive Design</h3>
@@ -133,7 +133,7 @@
                                 many web sites still in their infancy</p>
                         </div>
                     </div>
-                    <div class="row services-rocket">
+                    <div class="row services-items">
                         <div class="col-auto rocket-img"><img src="icons/rocket.png" alt=""></div>
                         <div class="col-10">
                             <h3 class="text-uppercase">Retina Ready icons here</h3>
@@ -142,7 +142,7 @@
                                 or randomised words which don't look even slightly believable.</p>
                         </div>
                     </div>
-                    <div class="row services-dollar">
+                    <div class="row services-items">
                         <div class="col-auto dollar-img">
                            <img src="icons/dollar.png" alt=""></div>
                         <div class="col-10">
