--- a/homework16/index.html
+++ b/homework16/index.html
@@ -159,7 +159,7 @@
     <div class="aboutus">
         <div class="row no-gutters">
             <div class="col-6">
-                <img src="img/bckrnd_table.jpg" width="100%" height="100%" alt=""></div>
+                <img class="aboutus-img" src="img/bckrnd_table.jpg" width="100%" height="100%" alt=""></div>
             <div class="col-6">
                 <div class="aboutus-article">
                     <h2 class="col-9">ABOUT US</h2>
