did PP in contacts&footer after change fonts

--- a/homework16/index.html
+++ b/homework16/index.html
@@ -355,8 +355,8 @@
                 <div class="align-self-center address-triangle"></div>
                 <img class="col-auto align-self-center address-logo" src="icons/shape.png" alt="">
             </div>
-            <div class="d-flex nav-bot justify-content-center">
-                <nav class="nav nav-pills nav-justified">
+            <div class="d-flex contacts-nav justify-content-center">
+                <nav class="nav nav-pills nav-justified contacts-nav-bot">
                     <a class="nav-link" href="#">HOME</a>
                     <a class="nav-link" href="#">SERVICE</a>
                     <a class="nav-link" href="#">ABOUT US</a>
@@ -371,12 +371,10 @@
                 <p class="col-auto phone-number">+987 9976 999</p>
             </div>
             <div class="d-flex justify-content-center contacts-logo">
-                <!-- <div class="col-auto"> -->
                     <img class="contacts-logo-items" src="icons/twitter.png" alt="">
                     <img class="contacts-logo-items" src="icons/fb.png" alt="">
                     <img class="contacts-logo-items" src="icons/google_plus.png" alt="">
                     <img class="contacts-logo-items" src="icons/linked.png" alt="">
-                <!-- </div> -->
             </div>
         </section>
     </div>
