try merge 2 files with link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>homework16</h1>
-    <a href="homework16/index.html"></a>
+    <a href="https://github.com/ret87/Hillel/blob/master/homework16/index.html"></a>
 
 </body>
 </html>
