--- a/homework16/index.html
+++ b/homework16/index.html
@@ -355,8 +355,8 @@
                 <div class="align-self-center address-triangle"></div>
                 <img class="col-auto align-self-center address-logo" src="icons/shape.png" alt="">
             </div>
-            <div class="d-flex contacts-nav justify-content-center">
-                <nav class="nav nav-pills nav-justified contacts-nav-bot">
+            <div class="d-flex justify-content-center contacts-nav">
+                <nav class="nav nav-pills nav-justified">
                     <a class="nav-link" href="#">HOME</a>
                     <a class="nav-link" href="#">SERVICE</a>
                     <a class="nav-link" href="#">ABOUT US</a>
