change adaptiv designe in forms

--- a/homework16/index.html
+++ b/homework16/index.html
@@ -34,21 +34,21 @@
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum typesetting</p>
             </div>
             <form class="row form-inline main-contact">
-                <div class="col-lg-3 bg-white contact-top">
+                <div class="col-xl-3 bg-white contact-top">
                     <label class="sr-only" for="fullname1">Full Name</label>
                     <div class="input-group align-items-center">
                         <img src="icons/human.png" alt="" width="12px" height="12px">
                         <input type="text" class="form-control border-0" id="fullname1" placeholder="Full Name">
                     </div>
                 </div>
-                <div class="col-lg-3 bg-white contact-top">
+                <div class="col-xl-3 bg-white contact-top">
                     <label class="sr-only" for="email1">Email Address</label>
                     <div class="input-group align-items-center">
                         <img src="icons/mail.png" alt="" width="12px" height="12px">
                         <input type="email" class="form-control border-0" id="email1" placeholder="Email Addres">
                     </div>
                 </div>
-                <div class="col-lg-3 bg-white contact-top">
+                <div class="col-xl-3 bg-white contact-top">
                     <label class="sr-only" for="tel1">Phone Number</label>
                     <div class="input-group align-items-center">
                         <img src="icons/phone.png" alt="" width="12px" height="12px">
