change adaptiv designe at bottom forms

--- a/homework16/index.html
+++ b/homework16/index.html
@@ -326,15 +326,15 @@
                 <h2>NEWSLETTER</h2>
                 <p class="subtitle">Lorem Ipsum is simply dummy Business industry</p>
             </div>
-            <form class="form-inline justify-content-between contacts-subscribe">
-                <div class="col-auto contacts-items contacts-items-name">
+            <form class="row form-inline contacts-subscribe">
+                <div class="col-xl contacts-items">
                     <label class="sr-only" for="fullname2">Name</label>
                     <div class="input-group align-items-center">
                         <img src="icons/human.png" alt="" width="12px" height="12px">
                         <input type="text" class="form-control border-0" id="fullname2" placeholder="Name">
                     </div>
                 </div>
-                <div class="col-auto contacts-items contacts-items-mail">
+                <div class="col-xl contacts-items contacts-items-mail">
                     <label class="sr-only" for="email2">Email Address</label>
                     <div class="input-group align-items-center">
                         <img src="icons/mail.png" alt="" width="15px" height="12px">
