did adaptive designe in Services module, and PP after

--- a/homework16/index.html
+++ b/homework16/index.html
@@ -94,7 +94,7 @@
                 <p class="subtitle">Lorem Ipsum is simply dummy Business industry.</p>
             </div>    
             <div class="row services-main">
-                <div class="col-lg-6 m-0 p-0">
+                <div class="col-xl mr-5 p-0">
                     <div class="row services-items">
                         <div class="col-auto clock-img"><img src="icons/clock.png" alt=""></div>
                         <div class="col-10">
@@ -123,7 +123,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 m-0 p-0">
+                <div class="col-xl m-0 p-0">
                     <div class="row services-items">
                         <div class="col-auto respons-img"><img src="icons/respons.png" alt=""></div>
                         <div class="col-10">
