did adaptive designe in header menu, change class at navbar with hidden button

--- a/homework16/index.html
+++ b/homework16/index.html
@@ -15,14 +15,21 @@
                 <div class="header-logo">
                     <img src="icons/Shape.png" alt="it`s logo" width="50" height="50">
                 </div>
-                <nav class="nav nav-pills nav-justified align-items-center header-menu">
-                    <a class="nav-link" href="#">HOME</a>
-                    <a class="nav-link" href="#">SERVICE</a>
-                    <a class="nav-link" href="#">ABOUT US</a>
-                    <a class="nav-link" href="#">PRICING TABLE</a>
-                    <a class="nav-link" href="#">HOW IT WORK</a>
-                    <a class="nav-link" href="#">HAPPY CLIENTS</a>
-                    <a class="nav-link" href="#">CONTACT US</a>
+                <nav class="navbar navbar-expand-lg navbar-light header-menu">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                                <a class="nav-link" href="#">HOME</a>
+                                <a class="nav-link" href="#">SERVICE</a>
+                                <a class="nav-link" href="#">ABOUT US</a>
+                                <a class="nav-link" href="#">PRICING TABLE</a>
+                                <a class="nav-link" href="#">HOW IT WORK</a>
+                                <a class="nav-link" href="#">HAPPY CLIENTS</a>
+                                <a class="nav-link" href="#">CONTACT US</a>
+                        </div>
+                    </div>
                 </nav>
             </div>
         </header>
@@ -176,7 +183,7 @@
             </div>    
         </div>
     </div>
-    <div class="container-fluid price">    
+    <!-- <div class="container-fluid price">    
         <section class="container text-center">
             <h2 class="col-12">CHOOS YOUR PRICE</h2>
             <p class="col-12 subtitle">Lorem Ipsum is simply dummy text of the printing typesetting .</p>
@@ -210,8 +217,8 @@
                 </div>
             </div>
         </section>
-    </div>       
-    <div class="container-fluid process">
+    </div>        -->
+    <!-- <div class="container-fluid process">
         <section class="container text-center">
             <h2>HOW IT WORKS</h2>
             <p class="subtitle">Lorem Inspum is simply dummy Business industry</p>
@@ -252,8 +259,8 @@
             </div>
             <button type="button" class="btn btn-primary process-button" data-toggle="button" aria-pressed="false" autocomplete="off">GET STARTED NOW</button>            
         </section>
-    </div>
-    <div class="container-fluid cards">
+    </div> -->
+    <!-- <div class="container-fluid cards">
         <aside class="container">
             <div class="text-center text-white">
                 <h2 class="text-center">HAPPY CLIENTS</h2>
@@ -319,7 +326,7 @@
                 </div>
             </div>                       
         </aside>
-    </div>
+    </div> -->
     <div class="container-fluid contacts">
         <section class="container">
             <div class="text-center">
