--- a/homework16/index.html
+++ b/homework16/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid header">
         <header class="container">
             <div class="row justify-content-between">
                 <div class="header-logo">
