delite empty classes

--- a/homework16/index.html
+++ b/homework16/index.html
@@ -166,7 +166,7 @@
     <div class="aboutus">
         <div class="row no-gutters">
             <div class="col-lg-6">
-                <img class="aboutus-img" src="img/bckrnd_table.jpg" width="100%" height="623px" alt=""></div>
+                <img class="img aboutus-img" src="img/bckrnd_table.jpg" width="100%" height="623px" alt=""></div>
             <div class="col-lg-6">
                 <div class="aboutus-article">
                     <h2 class="col-9">ABOUT US</h2>
