did adaptive designe in price module

--- a/homework16/index.html
+++ b/homework16/index.html
@@ -183,12 +183,12 @@
             </div>    
         </div>
     </div>
-    <!-- <div class="container-fluid price">    
+    <div class="container-fluid price">    
         <section class="container text-center">
             <h2 class="col-12">CHOOS YOUR PRICE</h2>
             <p class="col-12 subtitle">Lorem Ipsum is simply dummy text of the printing typesetting .</p>
             <div class="row price-plans">
-                <div class="col-4 bg-white price-first">
+                <div class="col-lg-4 bg-white price-first">
                     <h3>BASIC PLAN</h3>
                     <p class="price-outside price-dollar">$<span class="price-cost">22</span></p>
                     <p class="end-toppart">PER MONTH</p>
@@ -197,7 +197,7 @@
                     <p class="price-items">CUSTOM CLOUD SERVICES</p>
                     <button type="button" class="btn btn-primary price-button" data-toggle="button" aria-pressed="false" autocomplete="off">GET STARTED</button>            
                 </div>
-                <div class="col-4 price-middle">
+                <div class="col-lg-4 price-middle">
                     <h3 class="text-white">PREMIUM PLAN</h3>
                     <p class="price-dollar">$<span class="price-cost">42</span></p>
                     <p class="end-toppart">PER MONTH</p>
@@ -206,7 +206,7 @@
                     <p class="price-items">CUSTOM CLOUD SERVICES</p>
                     <button type="button" class="btn btn-primary price-button" data-toggle="button" aria-pressed="false" autocomplete="off">GET STARTED</button>            
                 </div>
-                <div class="col-4 bg-white price-thrd">
+                <div class="col-lg-4 bg-white price-thrd">
                     <h3>GOLD PLAN</h3>
                     <p class="price-outside price-dollar">$<span class="price-cost">62</span></p>
                     <p class="end-toppart">PER MONTH</p>
@@ -217,7 +217,7 @@
                 </div>
             </div>
         </section>
-    </div>        -->
+    </div>       
     <!-- <div class="container-fluid process">
         <section class="container text-center">
             <h2>HOW IT WORKS</h2>
