--- a/homework16/index.html
+++ b/homework16/index.html
@@ -218,7 +218,7 @@
             </div>
         </section>
     </div>       
-    <!-- <div class="container-fluid process">
+    <div class="container-fluid process">
         <section class="container text-center">
             <h2>HOW IT WORKS</h2>
             <p class="subtitle">Lorem Inspum is simply dummy Business industry</p>
@@ -259,7 +259,7 @@
             </div>
             <button type="button" class="btn btn-primary process-button" data-toggle="button" aria-pressed="false" autocomplete="off">GET STARTED NOW</button>            
         </section>
-    </div> -->
+    </div>
     <!-- <div class="container-fluid cards">
         <aside class="container">
             <div class="text-center text-white">
