did adaptive designe in steps module

--- a/homework16/index.html
+++ b/homework16/index.html
@@ -185,8 +185,8 @@
     </div>
     <div class="container-fluid price">    
         <section class="container text-center">
-            <h2 class="col-12">CHOOS YOUR PRICE</h2>
-            <p class="col-12 subtitle">Lorem Ipsum is simply dummy text of the printing typesetting .</p>
+            <h2>CHOOS YOUR PRICE</h2>
+            <p class="subtitle">Lorem Ipsum is simply dummy text of the printing typesetting .</p>
             <div class="row price-plans">
                 <div class="col-lg-4 bg-white price-first">
                     <h3>BASIC PLAN</h3>
@@ -231,26 +231,26 @@
                 <img class="img-fluid process-items-arrow arrow-top" src="icons/Arrow.png" width="128px" height="32px" alt="">
                 <img class="img-fluid process-items" src="icons/thumbs_up.png" width="72px" height="60px" alt="">
             </div>
-            <div class="row justify-content-between">
-                <div class="col-auto process-steps">
+            <div class="row">
+                <div class="col-md-3 process-steps">
                     <h3>STEP 1</h3>
                     <p>Lorem Ipsum is simply dummy text 
                         of the printing and typesetting ind
                         ustry. Lorem Ipsum has been</p>
                 </div>
-                <div class="col-auto process-steps">
+                <div class="col-md-3 process-steps">
                     <h3>STEP 2</h3>
                     <p>Lorem Ipsum is simply dummy text 
                         of the printing and typesetting ind
                         ustry. Lorem Ipsum has been</p>
                 </div>
-                <div class="col-auto process-steps">
+                <div class="col-md-3 process-steps">
                     <h3>STEP 3</h3>
                     <p>Lorem Ipsum is simply dummy text 
                         of the printing and typesetting ind
                         ustry. Lorem Ipsum has been</p>
                 </div>
-                <div class="col-auto process-steps">
+                <div class="col-md-3 process-steps">
                     <h3>STEP 4</h3>
                     <p>Lorem Ipsum is simply dummy text 
                         of the printing and typesetting ind
