did adaptive designe (responsive img)  in steps module

--- a/homework16/index.html
+++ b/homework16/index.html
@@ -222,7 +222,7 @@
         <section class="container text-center">
             <h2>HOW IT WORKS</h2>
             <p class="subtitle">Lorem Inspum is simply dummy Business industry</p>
-            <div class="row justify-content-between process-visual">
+            <div class="row justify-content-between d-none d-md-flex flex-nowrap process-visual">
                 <img class="img-fluid process-items" src="icons/headphone.png" width="72px" height="60px" alt="">
                 <img class="img-fluid process-items-arrow arrow-top" src="icons/Arrow.png" width="128px" height="32px" alt="">
                 <img class="img-fluid process-items" src="icons/lock.png" width="52px" height="60px" alt="">
