did module cards enable for test on mobile before work on adaptive design

--- a/homework16/index.html
+++ b/homework16/index.html
@@ -260,7 +260,7 @@
             <button type="button" class="btn btn-primary process-button" data-toggle="button" aria-pressed="false" autocomplete="off">GET STARTED NOW</button>            
         </section>
     </div>
-    <!-- <div class="container-fluid cards">
+    <div class="container-fluid cards">
         <aside class="container">
             <div class="text-center text-white">
                 <h2 class="text-center">HAPPY CLIENTS</h2>
@@ -326,7 +326,7 @@
                 </div>
             </div>                       
         </aside>
-    </div> -->
+    </div>
     <div class="container-fluid contacts">
         <section class="container">
             <div class="text-center">
