did adaptive designe and PP after that in cards module

--- a/homework16/index.html
+++ b/homework16/index.html
@@ -261,13 +261,13 @@
         </section>
     </div>
     <div class="container-fluid cards">
-        <aside class="container">
+        <aside class="container p-0">
             <div class="text-center text-white">
                 <h2 class="text-center">HAPPY CLIENTS</h2>
                 <p class="text-center text-white subtitle">We are explain who is using our business solutions</p>
             </div>
-            <div class="row justify-content-around align-content-around cards-items">
-                <div class="col-6 justify-content-between">
+            <div class="row justify-content-center cards-items">
+                <div class="col-md-8 col-xl-6">
                     <div class="row bg-white cards-items-left">
                         <div class="col-4 m-0 p-0">
                             <img class="rounded-circle cards-photo" src="img/ava_top_left.jpg" width="120px" height="120px" alt="">
@@ -281,10 +281,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 justify-content-between">
+                <div class="col-md-8 col-xl-6">
                     <div class="row bg-white cards-items-right">
                         <div class="col-4 m-0 p-0">
-                            <img class="rounded-circle cards-photo" src="img/ava_top_right.jpg" width="120px" height="120px" alt="">
+                            <img class="img-fluid rounded-circle cards-photo" src="img/ava_top_right.jpg" width="120px" height="120px" alt="">
                         </div>
                         <div class="col-8 m-0 p-0">
                             <p class="cards-mesage">Lorem Ipsum is simply dummy text of the printing and 
@@ -295,7 +295,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 justify-content-between">
+                <div class="col-md-8 col-xl-6">
                     <div class="row bg-white cards-items-left">
                         <div class="col-4 m-0 p-0">
                             <img class="rounded-circle cards-photo" src="img/ava_bot_left.jpg" width="120px" height="120px" alt="">
@@ -309,7 +309,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 justify-content-between">
+                <div class="col-md-8 col-xl-6">
                     <div class="row bg-white cards-items-right">
                         <div class="col-4 m-0 p-0">
                             <img class="rounded-circle cards-photo" src="img/ava_bot_right.jpg" width="120px" height="120px" alt="">
