--- a/homework16/index.html
+++ b/homework16/index.html
@@ -360,7 +360,7 @@
                     <p>info@businessface.com</p>
                 </div>
                 <div class="align-self-center address-triangle"></div>
-                <img class="col-auto align-self-center address-logo" src="icons/shape.png" alt="">
+                <img class="col-auto align-self-center address-logo" src="icons/Shape.png" alt="">
             </div>
             <div class="d-flex justify-content-center contacts-nav">
                 <nav class="nav nav-pills nav-justified">
