edit theme colors (text, border, bckgrnd

--- a/homework16/index.html
+++ b/homework16/index.html
@@ -38,7 +38,7 @@
         <main class="container">
             <div class="text-center text-white main-top">
                 <h1>BOOST UP YOUR LOCAL BUSINESS</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum typesetting</p>
+                <p class="text-white">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum typesetting</p>
             </div>
             <form class="row form-inline main-contact">
                 <div class="col-xl-3 bg-white contact-top">
@@ -169,8 +169,8 @@
                 <img class="img aboutus-img" src="img/bckrnd_table.jpg" width="100%" height="623px" alt=""></div>
             <div class="col-lg-6">
                 <div class="aboutus-article">
-                    <h2 class="col-9">ABOUT US</h2>
-                    <p class="col-9">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem 
+                    <h2 class="col-9 text-white">ABOUT US</h2>
+                    <p class="col-9 text-white">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem 
                         Ipsum has been the industry's standard dummy text ever since the 1500s, when an 
                         unknown printer took a galley of type and scrambled it to make a type specimen 
                         book. It has survived not only five centuries, but also the leap into electronic 
@@ -192,27 +192,27 @@
                     <h3>BASIC PLAN</h3>
                     <p class="price-outside price-dollar">$<span class="price-cost">22</span></p>
                     <p class="end-toppart">PER MONTH</p>
-                    <p class="price-items">1 ACCOUNT</p>
-                    <p class="price-items">8 HOUR SUPPORT</p>
-                    <p class="price-items">CUSTOM CLOUD SERVICES</p>
+                    <p class="price-first-items">1 ACCOUNT</p>
+                    <p class="price-first-items">8 HOUR SUPPORT</p>
+                    <p class="price-first-items">CUSTOM CLOUD SERVICES</p>
                     <button type="button" class="btn btn-primary price-button" data-toggle="button" aria-pressed="false" autocomplete="off">GET STARTED</button>            
                 </div>
                 <div class="col-lg-4 price-middle">
                     <h3 class="text-white">PREMIUM PLAN</h3>
                     <p class="price-dollar">$<span class="price-cost">42</span></p>
                     <p class="end-toppart">PER MONTH</p>
-                    <p class="price-items">2 ACCOUNT</p>
-                    <p class="price-items">100MB STORAGE</p>
-                    <p class="price-items">CUSTOM CLOUD SERVICES</p>
+                    <p class="price-middle-items">2 ACCOUNT</p>
+                    <p class="price-middle-items">100MB STORAGE</p>
+                    <p class="price-middle-items">CUSTOM CLOUD SERVICES</p>
                     <button type="button" class="btn btn-primary price-button" data-toggle="button" aria-pressed="false" autocomplete="off">GET STARTED</button>            
                 </div>
                 <div class="col-lg-4 bg-white price-thrd">
                     <h3>GOLD PLAN</h3>
                     <p class="price-outside price-dollar">$<span class="price-cost">62</span></p>
                     <p class="end-toppart">PER MONTH</p>
-                    <p class="price-items">8 ACCOUNT</p>
-                    <p class="price-items">24 HOUR SUPPORT</p>
-                    <p class="price-items">CUSTOM CLOUD SERVICES</p>
+                    <p class="price-thrd-items">8 ACCOUNT</p>
+                    <p class="price-thrd-items">24 HOUR SUPPORT</p>
+                    <p class="price-thrd-items">CUSTOM CLOUD SERVICES</p>
                     <button type="button" class="btn btn-primary price-button" data-toggle="button" aria-pressed="false" autocomplete="off">GET STARTED</button>            
                 </div>
             </div>
@@ -257,13 +257,13 @@
                         ustry. Lorem Ipsum has been</p>
                 </div>
             </div>
-            <button type="button" class="btn btn-primary process-button" data-toggle="button" aria-pressed="false" autocomplete="off">GET STARTED NOW</button>            
+            <button type="button" class="btn btn-primary process-button" data-toggle="button" aria-pressed="false" autocomplete="off">GET START NOW</button>            
         </section>
     </div>
     <div class="container-fluid cards">
         <aside class="container p-0">
-            <div class="text-center text-white">
-                <h2 class="text-center">HAPPY CLIENTS</h2>
+            <div class="text-center">
+                <h2 class="text-center text-white">HAPPY CLIENTS</h2>
                 <p class="text-center text-white subtitle">We are explain who is using our business solutions</p>
             </div>
             <div class="row justify-content-center cards-items">
@@ -277,7 +277,7 @@
                                 typesetting industry. Lorem Ipsum has been the industry standard dummy 
                                 text ever since the 1500s, when an unknown printer took a galley of type 
                                 and scrambled it to make.</p>
-                            <p class="text-uppercase"><span class="cards-name">Darwin Michle,</span> Project manager</p>
+                            <p class="text-uppercase cards-name">Darwin Michle,<span class="cards-prof"> Project manager</span></p>
                         </div>
                     </div>
                 </div>
@@ -291,7 +291,7 @@
                                 typesetting industry. Lorem Ipsum has been the industrystandard dummy text 
                                 ever since the 1500s, wen an unknown printer took a galley of type and scrambled 
                                 to make a type specimen book.</p>
-                            <p class="text-uppercase"><span class="cards-name">Madam Elisabath,</span> Creative Director</p>
+                            <p class="text-uppercase cards-name">Madam Elisabath,<span class="cards-prof"> Creative Director</span></p>
                         </div>
                     </div>
                 </div>
@@ -305,7 +305,7 @@
                                 typesetting industry. Lorem Ipsum has been the industry standard dummy text 
                                 ever since the 1500s, when an unknown printer took a galley of type and scrambled
                                 it to make.</p>
-                            <p class="text-uppercase"><span class="cards-name">Clips arter,</span> Lipsum directer</p>
+                            <p class="text-uppercase cards-name">Clips arter,<span class="cards-prof"> Lipsum directer</span></p>
                         </div>
                     </div>
                 </div>
@@ -320,7 +320,7 @@
                                 Lorem Ipsum has been the industrystandard dummy text ever since the 1500s, wen 
                                 an unknown printer took a galley of type and scrambled to make a type specimen 
                                 book.</p>
-                            <p class="text-uppercase"><span class="cards-name">zam cristafr,</span> manager</p>
+                            <p class="text-uppercase cards-name">zam cristafr,<span class="cards-prof"> manager</span></p>
                         </div>
                     </div>
                 </div>
