edit display none lower md displays at img in aboutUS module

--- a/homework16/index.html
+++ b/homework16/index.html
@@ -165,7 +165,7 @@
     </div>
     <div class="aboutus">
         <div class="row no-gutters">
-            <div class="col-lg-6">
+            <div class="col-lg-6 d-none d-lg-block">
                 <img class="img aboutus-img" src="img/bckrnd_table.jpg" width="100%" height="623px" alt=""></div>
             <div class="col-lg-6">
                 <div class="aboutus-article">
